--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,21 @@ h1:nth-child(6) {
   animation-delay: 1.8s;
   animation-fill-mode: forwards;
 }
+.synopsys {
+  animation: miniText 0.5s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes miniText {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 @keyframes one {
   from {
@@ -135,8 +150,4 @@ h1:nth-child(6) {
         margin-left: 72%;
         opacity: 1;
     }
-}
-
-.co {
-  scroll-snap-type: y mandatory;
 }
