--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,25 @@
   font-family: "Gazpacho";
   src: url("../src/assets/fonts/Gazpacho/Gazpacho\ Heavy.ttf");
 }
+@font-face {
+  font-family: "gazpachoLight";
+  src: url("../src/assets/fonts/Gazpacho/Gazpacho\ Light.ttf");
+}
+@font-face {
+  font-family: "gingerThin";
+  src: url("../src/assets/fonts/Ginger/gingerThin.ttf");
+}
+@font-face {
+  font-family: "gingerRegular";
+  src: url("../src/assets/fonts/Ginger/gingerRegular.ttf");
+}
+@font-face {
+  font-family: "gingerBold";
+  src: url("../src/assets/fonts/Ginger/gingerBold.otf");
+}
+
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 body {
   margin: 0;
@@ -11,6 +30,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  font-family: 'gingerRegular', sans-serif;
 }
 
 code {
