--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,78 @@ h1 {
   -webkit-text-stroke: 1px black;
   animation-fill-mode: forwards;
   opacity: 0;
+}
 
+.step {
+  box-shadow: inset 1px 1px 4px #280d57;
+}
+
+span.fantasy {
+  font-family: fantasy;
+}
+
+span.marketing {
+  -webkit-text-stroke: 1px  white;
+  color: transparent;
+  transition: .1s;
+  opacity: 0;
+}
+
+.diagonal::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #461f89;
+  transform: skew(0deg, 0deg) translateX(50%);
+}
+.diagonal2::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #461f89;
+  transform: skew(0deg, 0deg) translateX(-50%);
+}
+
+ul.mt-6 > li {
+  margin-bottom: 9px;
+  color: white;
+}
+ul.mt-6 > li:hover {
+  color: yellow;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.custom-shape-divider-top-1666711746 svg {
+  transform: rotateX(0deg) scaleX(-1);
+}
+
+.services {
+  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  opacity: 0.7;
+}
+
+.custom-shape-divider-top-1666705716 {
+  position: absolute;
+  top: -34%;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1666705716 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 140px;
+  transform: rotateX(180deg);
 }
 
 h1:nth-child(1) {
@@ -59,7 +130,6 @@ h1:nth-child(6) {
   to {
     top: 20%;
     opacity: 1;
-
   }
 }
 @keyframes two {
@@ -70,7 +140,6 @@ h1:nth-child(6) {
   100% {
     top: 28%;
     opacity: 1;
-    
   }
 }
 @keyframes three {
@@ -81,7 +150,6 @@ h1:nth-child(6) {
   100% {
     top: 36%;
     opacity: 1;
-
   }
 }
 @keyframes four {
@@ -92,7 +160,6 @@ h1:nth-child(6) {
   100% {
     top: 44%;
     opacity: 1;
-    
   }
 }
 @keyframes five {
@@ -103,7 +170,6 @@ h1:nth-child(6) {
   100% {
     top: 52%;
     opacity: 1;
-
   }
 }
 @keyframes six {
@@ -114,40 +180,38 @@ h1:nth-child(6) {
   100% {
     top: 60%;
     opacity: 1;
-    
   }
 }
 
-
 .boy {
-    animation: boy 1s ease-in-out;
-    animation-delay: .2s;
-    animation-fill-mode: forwards;
-    opacity: 0;
+  animation: boy 1s ease-in-out;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 .girl {
-    animation: girl 1s ease-in-out;
-    animation-fill-mode: forwards;
-    opacity: 0;
+  animation: girl 1s ease-in-out;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 
 @keyframes boy {
-    0% {
-        margin-left: -29%;
-        opacity: 0.8;
-    }
-    100% {
-        margin-left: 2%;
-        opacity: 1;
-    }
+  0% {
+    margin-left: -29%;
+    opacity: 0.8;
+  }
+  100% {
+    margin-left: 2%;
+    opacity: 1;
+  }
 }
 @keyframes girl {
-    0% {
-        margin-left: 108%;
-        opacity: 0.8;
-    }
-    100% {
-        margin-left: 72%;
-        opacity: 1;
-    }
+  0% {
+    margin-left: 108%;
+    opacity: 0.8;
+  }
+  100% {
+    margin-left: 72%;
+    opacity: 1;
+  }
 }
