--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,17 @@
-h1 {
-  -webkit-text-stroke: 1px black;
-  animation-fill-mode: forwards;
-  opacity: 0;
+.imgBox:hover img {
+  animation: float 2s infinite ease-in-out;
+  transform: translatey(0px);
+}
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
 }
 
-.step {
-  box-shadow: inset 1px 1px 4px #280d57;
-}
-
-span.fantasy {
-  font-family: fantasy;
-}
-
-span.marketing {
-  -webkit-text-stroke: 1px  white;
-  color: transparent;
-  transition: .1s;
-  opacity: 0;
-}
-
-.diagonal::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background-color: #461f89;
-  transform: skew(0deg, 0deg) translateX(50%);
-}
-.diagonal2::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background-color: #461f89;
-  transform: skew(0deg, 0deg) translateX(-50%);
-}
 
 ul.mt-6 > li {
   margin-bottom: 9px;
@@ -50,168 +23,10 @@ ul.mt-6 > li:hover {
   text-decoration: underline;
 }
 
-.custom-shape-divider-top-1666711746 svg {
-  transform: rotateX(0deg) scaleX(-1);
-}
 
 .services {
   -webkit-text-stroke: 1px rgb(255, 255, 255);
   opacity: 0.7;
 }
 
-.custom-shape-divider-top-1666705716 {
-  position: absolute;
-  top: -34%;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
 
-.custom-shape-divider-top-1666705716 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 140px;
-  transform: rotateX(180deg);
-}
-
-h1:nth-child(1) {
-  animation: one 1s;
-  animation-delay: 0.3s;
-  animation-fill-mode: forwards;
-}
-h1:nth-child(2) {
-  animation: two 0.9s;
-  animation-delay: 0.6s;
-  animation-fill-mode: forwards;
-}
-h1:nth-child(3) {
-  animation: three 0.8s;
-  animation-delay: 0.9s;
-  animation-fill-mode: forwards;
-}
-h1:nth-child(4) {
-  animation: four 0.7s;
-  animation-delay: 1.2s;
-  animation-fill-mode: forwards;
-}
-h1:nth-child(5) {
-  animation: five 0.6s;
-  animation-delay: 1.5s;
-  animation-fill-mode: forwards;
-}
-h1:nth-child(6) {
-  animation: six 0.5s;
-  animation-delay: 1.8s;
-  animation-fill-mode: forwards;
-}
-.synopsys {
-  animation: miniText 0.5s;
-  animation-delay: 2s;
-  animation-fill-mode: forwards;
-  opacity: 0;
-}
-
-@keyframes miniText {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes one {
-  from {
-    top: 15%;
-    opacity: 0.5;
-  }
-  to {
-    top: 20%;
-    opacity: 1;
-  }
-}
-@keyframes two {
-  0% {
-    top: 23%;
-    opacity: 0;
-  }
-  100% {
-    top: 28%;
-    opacity: 1;
-  }
-}
-@keyframes three {
-  0% {
-    top: 31%;
-    opacity: 0;
-  }
-  100% {
-    top: 36%;
-    opacity: 1;
-  }
-}
-@keyframes four {
-  0% {
-    top: 39%;
-    opacity: 0;
-  }
-  100% {
-    top: 44%;
-    opacity: 1;
-  }
-}
-@keyframes five {
-  0% {
-    top: 47%;
-    opacity: 0;
-  }
-  100% {
-    top: 52%;
-    opacity: 1;
-  }
-}
-@keyframes six {
-  0% {
-    top: 55%;
-    opacity: 0;
-  }
-  100% {
-    top: 60%;
-    opacity: 1;
-  }
-}
-
-.boy {
-  animation: boy 1s ease-in-out;
-  animation-delay: 0.2s;
-  animation-fill-mode: forwards;
-  opacity: 0;
-}
-.girl {
-  animation: girl 1s ease-in-out;
-  animation-fill-mode: forwards;
-  opacity: 0;
-}
-
-@keyframes boy {
-  0% {
-    margin-left: -29%;
-    opacity: 0.8;
-  }
-  100% {
-    margin-left: 2%;
-    opacity: 1;
-  }
-}
-@keyframes girl {
-  0% {
-    margin-left: 108%;
-    opacity: 0.8;
-  }
-  100% {
-    margin-left: 72%;
-    opacity: 1;
-  }
-}
