--- a/src/styles/Project/website.css
+++ b/src/styles/Project/website.css
@@ -2,15 +2,26 @@
    box-shadow: 4px 6px 2px #051032;
    border-radius: 5px;
    transition: .2s ease-in-out;
-   margin: 0px 60px;
    cursor: pointer;
+}
+.inputForm {
+   box-shadow: 4px 6px 2px #051032;
+   border-radius: 5px;
+   transition: .2s ease-in-out
 }
 
 .boxActive {
     box-shadow: 2px 2px 2px #051032 ;
-    border: 2px solid white;
+    border: 2px solid #ffa31c;
 }
 
 .boxGender:hover {
     box-shadow: 2px 2px 2px #051032 ;
+}
+.inputForm:hover {
+    box-shadow: 2px 2px 2px #051032 ;
+}
+.inputForm:focus {
+    box-shadow: inset 1px 3px 2px #082174 ;
+    transition: 1s ease;
 }
