--- a/src/index.css
+++ b/src/index.css
@@ -53,37 +53,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   font-family: "mabryRegular", sans-serif;
+  overscroll-behavior: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.htmlScreen {
-  transition: opacity 0.5s cubic-bezier(0.61, 1, 0.88, 1);
-  opacity: 1;
-  position: relative;
-  display: grid;
-  grid-template:
-    'label .'
-    'tag expl';
-  align-items: end;
-  line-height: 1em;
-  gap: 1em;
-  overflow: hidden;
-  pointer-events: none;
-  height: 12.5vw;
-}
-
-.htmlScreen iframe {
-  width: 1024px;
-  height: 670px;
-  overflow: hidden;
-}
-
-.htmlScreen.show {
-  opacity: 1;
 }
 
 @tailwind base;
