--- a/src/App.css
+++ b/src/App.css
@@ -29,4 +29,10 @@ ul.mt-6 > li:hover {
   opacity: 0.7;
 }
 
-
+.frame iframe {
+  background: #000000;
+  border: none;
+  border-radius: 20px;
+  width: 1024px;
+  height: 670px;
+}
